# pip-notepad

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: click-through.ts  exporter.ts  opacity-control.ts  status-bar.ts  theme-manager.ts  toolbar-toggle.ts  toolbar.ts
src/lib/: clipboard.ts  drag.ts  editor.ts  importer.ts  markdown.ts  storage.ts  zoom.ts
src/styles/: editor.css  main.css  theme.css  toolbar.css
src/types/: turndown.d.ts
