[package]
name = "pip-notepad"
version = "0.1.0"
description = "Picture-in-Picture Notepad"
authors = [""]
edition = "2021"

[lib]
name = "pip_notepad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
